progress init on website

--- a/code/MIDI_Controller_Box/website/css/style.css
+++ b/code/MIDI_Controller_Box/website/css/style.css
@@ -17,3 +17,37 @@ html, body {
 	color: white;
 	padding-top: 160px;
 }
+
+#mainDiv{
+}
+
+#spinningRecord{
+}
+#startStopDiv{
+}
+#sampleDiv{
+}
+#audioDiv{
+}
+#audioVisualize{
+}
+#audioName{
+}
+#gifDiv{
+}
+#gifSwap{
+}
+#gif0{
+}
+#gif1{
+}
+#gif2{
+}
+#gifSpeed{
+}
+#volumeDiv{
+}
+#songSelect{
+}
+#fxselect{
+}
